Fixed item overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -169,7 +169,10 @@ code {
   position: relative;
   z-index: 2;
   min-width: 300px;
-  text-align: center;
+  overflow: hidden;
+  width: 100%;
+  max-width: 600px;
+  margin-left: 200px;
 }
 
 #hero h1 {
